--- a/src/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/CoreBundle/Resources/translations/messages.en.yml
@@ -1,1 +1,2 @@
 Riverway\Cms\CoreBundle\Widget\Realisation\EditorWidget: Editor widget
+Riverway\Cms\CoreBundle\Widget\Realisation\FormWidget: Form widget
